src/test/deca/demo/error/invalid_lvalue.deca
//Programme contenant une lvalue invalide
{
    //Déclaration
    int var;

    2 + 5 = var;
}
